# claude-statusline

./: Cargo.toml  README.md  install.sh  update.sh
.github/workflows/: release.yml
src/: cache.rs  colors.rs  config.rs  diff.rs  fsutil.rs  git.rs  main.rs  process.rs  tokens.rs  usage.rs
tests/: diff_tests.rs  git_tests.rs  patch_diff_tests.rs  usage_tests.rs
