[package]
name = "statusline"
version = "1.2.3"
edition = "2024"
# File::try_lock / TryLockError (src/usage.rs) were stabilized in Rust 1.89.
rust-version = "1.89"

[dependencies]
catppuccin = "2.6.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
